# master-debugger

./: .gitignore  README.md  pyproject.toml
backend/: __init__.py  config.example.yaml  config_copy.yaml  main.py  requirements.txt
backend/analysis/: __init__.py  plot_experiments.py  plot_load_score.py
backend/api/: __init__.py  rest_api.py  serialization.py  server.py  websocket_server.py
backend/core/: __init__.py  runtime_controller.py
backend/layers/: __init__.py  feedback_layer.py  forecasting_tool.py  llm_client.py  reactive_tool.py  runtime_controller.py  signal_processing.py
backend/models/: __init__.py  forecast_feature_schema.py  xgboost_forecaster.py
backend/models/trained/: latest.json  latest_metadata.json  xgb_forecaster_20260313_120151_metadata.json  xgb_forecaster_20260318_204907_contrib_anticipation.json  xgb_forecaster_20260318_204907_contrib_fixation_duration.json  (+2 more)
backend/scripts/: plot_ipa.py  run_replay.py  run_tobii_records.py
backend/services/: llm_client.py  logger_service.py
backend/training/: __init__.py  dataset.py  preprocess.py  train_xgboost.py  train_xgboost_trigger_classifier.py
backend/types/: __init__.py  code_context.py  config.py  domain_events.py  eye_tracking.py  feedback.py  messages.py  user_state.py
vscode-extension/: README.md  package.json
vscode-extension/src/: api.ts  context-collector.ts  extension.ts  feedback-renderer.ts  status-bar.ts  types.ts  websocket-client.ts  webview-provider.ts
vscode-extension/webview-ui/: .eslintrc.cjs  .gitignore  index.html  package.json  vite.config.ts
(+25 files in other folders)
