[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "eye-tracking-debugger"
version = "0.1.0"
description = "Eye-tracking based debugging assistance for VS Code"
requires-python = ">=3.11"
dependencies = [
    "websockets>=12.0",
    "aiohttp>=3.9.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "structlog>=23.0.0",
]

[project.scripts]
eye-tracking-backend = "backend.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]
